// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> renders correctly 1`] = `
<DocumentFragment>
  <button
    class="chakra-button css-rajj9k"
    type="button"
  >
    Content of the button
  </button>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Button /> renders correctly for size lg & variant primary: Button-primary-lg-error 1`] = `
<DocumentFragment>
  <button
    class="chakra-button css-jymy6g"
    type="button"
  >
    Content of the button
  </button>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Button /> renders correctly for size lg & variant primary: Button-primary-lg-info 1`] = `
<DocumentFragment>
  <button
    class="chakra-button css-ett4rg"
    type="button"
  >
    Content of the button
  </button>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Button /> renders correctly for size lg & variant primary: Button-primary-lg-success 1`] = `
<DocumentFragment>
  <button
    class="chakra-button css-e3rcup"
    type="button"
  >
    Content of the button
  </button>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Button /> renders correctly for size lg & variant primary: Button-primary-lg-warning 1`] = `
<DocumentFragment>
  <button
    class="chakra-button css-wj1ala"
    type="button"
  >
    Content of the button
  </button>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Button /> renders correctly for size lg & variant secondary: Button-secondary-lg-error 1`] = `
<DocumentFragment>
  <button
    class="chakra-button css-1kx1fhq"
    type="button"
  >
    Content of the button
  </button>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Button /> renders correctly for size lg & variant secondary: Button-secondary-lg-info 1`] = `
<DocumentFragment>
  <button
    class="chakra-button css-9d1pl2"
    type="button"
  >
    Content of the button
  </button>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Button /> renders correctly for size lg & variant secondary: Button-secondary-lg-success 1`] = `
<DocumentFragment>
  <button
    class="chakra-button css-178a8wn"
    type="button"
  >
    Content of the button
  </button>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Button /> renders correctly for size lg & variant secondary: Button-secondary-lg-warning 1`] = `
<DocumentFragment>
  <button
    class="chakra-button css-6hlnjf"
    type="button"
  >
    Content of the button
  </button>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Button /> renders correctly for size lg & variant tertiary: Button-tertiary-lg-error 1`] = `
<DocumentFragment>
  <button
    class="chakra-button css-8lffqo"
    type="button"
  >
    Content of the button
  </button>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Button /> renders correctly for size lg & variant tertiary: Button-tertiary-lg-info 1`] = `
<DocumentFragment>
  <button
    class="chakra-button css-1svmljl"
    type="button"
  >
    Content of the button
  </button>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Button /> renders correctly for size lg & variant tertiary: Button-tertiary-lg-success 1`] = `
<DocumentFragment>
  <button
    class="chakra-button css-m9fpsm"
    type="button"
  >
    Content of the button
  </button>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Button /> renders correctly for size lg & variant tertiary: Button-tertiary-lg-warning 1`] = `
<DocumentFragment>
  <button
    class="chakra-button css-qew0cg"
    type="button"
  >
    Content of the button
  </button>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Button /> renders correctly for size md & variant primary: Button-primary-md-error 1`] = `
<DocumentFragment>
  <button
    class="chakra-button css-cgs9di"
    type="button"
  >
    Content of the button
  </button>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Button /> renders correctly for size md & variant primary: Button-primary-md-info 1`] = `
<DocumentFragment>
  <button
    class="chakra-button css-10gbpej"
    type="button"
  >
    Content of the button
  </button>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Button /> renders correctly for size md & variant primary: Button-primary-md-success 1`] = `
<DocumentFragment>
  <button
    class="chakra-button css-fum8yl"
    type="button"
  >
    Content of the button
  </button>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Button /> renders correctly for size md & variant primary: Button-primary-md-warning 1`] = `
<DocumentFragment>
  <button
    class="chakra-button css-jnv93u"
    type="button"
  >
    Content of the button
  </button>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Button /> renders correctly for size md & variant secondary: Button-secondary-md-error 1`] = `
<DocumentFragment>
  <button
    class="chakra-button css-4s23xp"
    type="button"
  >
    Content of the button
  </button>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Button /> renders correctly for size md & variant secondary: Button-secondary-md-info 1`] = `
<DocumentFragment>
  <button
    class="chakra-button css-16w97fb"
    type="button"
  >
    Content of the button
  </button>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Button /> renders correctly for size md & variant secondary: Button-secondary-md-success 1`] = `
<DocumentFragment>
  <button
    class="chakra-button css-1ysgpzs"
    type="button"
  >
    Content of the button
  </button>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Button /> renders correctly for size md & variant secondary: Button-secondary-md-warning 1`] = `
<DocumentFragment>
  <button
    class="chakra-button css-1ds3cjo"
    type="button"
  >
    Content of the button
  </button>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Button /> renders correctly for size md & variant tertiary: Button-tertiary-md-error 1`] = `
<DocumentFragment>
  <button
    class="chakra-button css-1zus9n"
    type="button"
  >
    Content of the button
  </button>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Button /> renders correctly for size md & variant tertiary: Button-tertiary-md-info 1`] = `
<DocumentFragment>
  <button
    class="chakra-button css-wuhl4a"
    type="button"
  >
    Content of the button
  </button>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Button /> renders correctly for size md & variant tertiary: Button-tertiary-md-success 1`] = `
<DocumentFragment>
  <button
    class="chakra-button css-29iwb9"
    type="button"
  >
    Content of the button
  </button>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Button /> renders correctly for size md & variant tertiary: Button-tertiary-md-warning 1`] = `
<DocumentFragment>
  <button
    class="chakra-button css-kasexb"
    type="button"
  >
    Content of the button
  </button>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;
